add rest of required args for surefire