@@ -439,6 +439,8 @@
             <configuration>
               <argLine>
                 --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
